# rtems-oldland

./: config.sub
c/src/aclocal/: rtems-cpu-subdirs.m4
c/src/lib/libbsp/oldland/: acinclude.m4  configure.ac
c/src/lib/libbsp/oldland/keynsham/: Makefile.am  configure.ac  preinstall.am
c/src/lib/libbsp/oldland/keynsham/clock/: clockdrv.c  timer_defines.h
c/src/lib/libbsp/oldland/keynsham/console/: console-io.c
c/src/lib/libbsp/oldland/keynsham/include/: bsp.h  irq.h
c/src/lib/libbsp/oldland/keynsham/irq/: irq.c
c/src/lib/libbsp/oldland/keynsham/make/custom/: keynsham.cfg
c/src/lib/libbsp/oldland/keynsham/start/: start.S
c/src/lib/libbsp/oldland/keynsham/startup/: bspstart.c  linkcmds
c/src/lib/libcpu/oldland/: Makefile.am  configure.ac  preinstall.am
c/src/lib/libcpu/oldland/shared/interrupts/: isr_entries.h
cpukit/: configure.ac
cpukit/librpc/src/xdr/: xdr_float.c
cpukit/score/cpu/: Makefile.am
cpukit/score/cpu/oldland/: Makefile.am  cpu.c  cpu_asm.S  oldland-exception-frame-print.c  preinstall.am
cpukit/score/cpu/oldland/rtems/: asm.h
cpukit/score/cpu/oldland/rtems/score/: cpu.h  oldland.h  types.h
testsuites/libtests/: configure.ac
